@@ -17,10 +17,36 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<repositories>
+		<repository>
+      		<id>maven-central-cglib</id>
+      		<name>maven central cglib</name>
+      		<url>https://repo1.maven.org/maven2/</url>
+    	</repository>
+    	<repository>
+      		<id>maven-central</id>
+      		<name>maven central</name>
+      		<url>http://central.maven.org/maven2/</url>
+    	</repository>
+    	<repository>
+      		<id>maven-central-taglibs</id>
+      		<name>maven central taglibs</name>
+      		<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+    	</repository>
+		 <repository>
+      		<id>apache-snapshots</id>
+      		<name>Apache SNAPSHOT Repository</name>
+      		<url>http://repository.apache.org/snapshots/</url>
+      		<snapshots>
+         		<enabled>true</enabled>
+      		</snapshots>
+   		</repository>
+  	</repositories>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-		<io.springfox.version>2.2.2</io.springfox.version>
+		<java.version>12</java.version>
+		<io.springfox.version>2.9.2</io.springfox.version>
 		<querydsl.version>3.7.2</querydsl.version>
 		<org.powermock.version>1.6.2</org.powermock.version>
 		<!-- <endpoint.email.wsdl.base.url>http://phxiowasq34.internal.mcmcg.com</endpoint.email.wsdl.base.url> -->
@@ -28,6 +54,7 @@
 		<endpoint.email.wsdl.uri>${endpoint.email.wsdl.base.url}/MailManagerEJBHttpRouter/services/EmailRequestor</endpoint.email.wsdl.uri>
 		<springdata.commons>1.11.4.RELEASE</springdata.commons>
 		<!-- <sonar.host.url>http://localhost:9000/</sonar.host.url> -->
+		<cxf.version>2.2.3</cxf.version>
 	</properties>
 
 	
@@ -42,6 +69,23 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+        <version>${cxf.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http</artifactId>
+        <version>${cxf.version}</version>
+    </dependency>
+        <!-- Jetty is needed if you're are not using the CXFServlet 
+    <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http-jetty</artifactId>
+        <version>${cxf.version}</version>
+    </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
@@ -49,16 +93,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<!-- Remove the two JPA dependencies for ORM refactoring -->
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-		</dependency> -->
 		<!-- Added below one for Page, PageRequest classes of data package-->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -80,11 +121,6 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.jadira.usertype</groupId>
-			<artifactId>usertype.core</artifactId>
-			<version>4.0.0.GA</version>
-		</dependency> -->
 
 		<!-- Jackson json data bind -->
 		<dependency>
@@ -105,13 +141,6 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Dependency for MS SQL Server Java connector -->
-		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>sqljdbc</artifactId>
-			<version>4</version>
-		</dependency>
-
 		<!-- Apache commons CSV -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -125,42 +154,85 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-el</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.tomcat.embed</groupId>
+					<artifactId>tomcat-embed-websocket</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.tomcat</groupId>
+    		<artifactId>tomcat-util</artifactId>
+    		<version>9.0.22</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+       </dependency>
+
+       
+       <dependency>
+    		<groupId>org.apache.taglibs</groupId>
+    		<artifactId>taglibs-standard-impl</artifactId>
+    		<version>1.2.5</version>
 		</dependency>
 
 		<!-- Query DSL -->
-	<!-- 	<dependency>
-			<groupId>com.mysema.querydsl</groupId>
-			<artifactId>querydsl-core</artifactId>
-			<version>${querydsl.version}</version>
-		</dependency> -->
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 			<version>${querydsl.version}</version>
 		</dependency>
-	<!-- 	<dependency>
-			<groupId>com.mysema.querydsl</groupId>
-			<artifactId>querydsl-jpa</artifactId>
-			<version>${querydsl.version}</version>
-		</dependency> -->
 
 		<!-- Swagger 2 -->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${io.springfox.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${io.springfox.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
-		<!-- Utils -->
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.16.8</version>
+    		<groupId>com.google.guava</groupId>
+    		<artifactId>guava</artifactId>
+    		<version>28.0-jre</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+		<dependency>
+    		<groupId>org.aspectj</groupId>
+    		<artifactId>aspectjrt</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.aspectj</groupId>
+    		<artifactId>aspectjweaver</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -170,14 +242,12 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.4</version>
 		</dependency>
-
 
 		<!-- Test -->
 		<dependency>
@@ -205,7 +275,6 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -230,6 +299,57 @@
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.javassist</groupId>
+    		<artifactId>javassist</artifactId>
+    		<version>3.23.1-GA</version>
+		</dependency>
+		<dependency>
+    		<groupId>cglib</groupId>
+    		<artifactId>cglib-nodep</artifactId>
+    		<version>3.2.12</version>
+		</dependency>
+		<dependency>
+    		<groupId>javax.annotation</groupId>
+    		<artifactId>javax.annotation-api</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.glassfish.jaxb</groupId>
+    		<artifactId>jaxb-runtime</artifactId>
+    		<version>2.3.2</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>com.sun.xml.bind</groupId>
+    		<artifactId>jaxb-core</artifactId>
+    		<version>2.3.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>javax.activation</groupId>
+    		<artifactId>activation</artifactId>
+    		<version>1.1.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>javax.xml.ws</groupId>
+    		<artifactId>jaxws-api</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.surefire/surefire-testng -->
+		<dependency>
+    		<groupId>org.apache.maven.surefire</groupId>
+    		<artifactId>surefire-testng</artifactId>
+    		<version>2.22.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.9.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<!-- Required because we have two parent poms -->
@@ -239,7 +359,7 @@
 				<!-- Import dependency management from Spring Boot -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>1.3.6.RELEASE</version>
+				<version>2.1.6.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -269,7 +389,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5</version>
+				<version>3.8.1</version>
 				<!-- compile for Java 1.8 -->
 				<configuration>
 					<source>${java.version}</source>
@@ -280,7 +400,7 @@
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-codegen-plugin</artifactId>
-				<version>3.1.5</version>
+				<version>3.3.4</version>
 				<executions>
 					<execution>
 						<id>generate-sources</id>
@@ -292,6 +412,12 @@
 									<wsdl>${endpoint.email.wsdl.uri}?wsdl</wsdl>
 								</wsdlOption>
 							</wsdlOptions>
+							<defaultOptions>
+    <extraargs>
+        <extraarg>-frontend</extraarg>
+        <extraarg>jaxws21</extraarg>
+    </extraargs>
+</defaultOptions>
 						</configuration>
 						<goals>
 							<goal>wsdl2java</goal>
@@ -329,7 +455,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.2.3</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
@@ -351,6 +477,37 @@
 					</execution>
 				</executions>
 			</plugin> -->
+			
+			<plugin>
+    			<groupId>org.codehaus.mojo</groupId>
+    			<artifactId>versions-maven-plugin</artifactId>
+    			<version>2.5</version>
+    			<configuration>
+        			<generateBackupPoms>false</generateBackupPoms>
+    			</configuration>
+			</plugin>
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.22.1</version>
+    			<configuration>
+    				<skipTests>true</skipTests>
+        			<argLine>
+            			--illegal-access=permit
+        			</argLine>
+    			</configuration>
+			</plugin>
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-failsafe-plugin</artifactId>
+    			<version>2.22.0</version>
+    			<configuration>
+        			<argLine>
+            			--illegal-access=permit
+        			</argLine>
+    			</configuration>
+			</plugin>
+			
 		</plugins>
 		<finalName>bluefin-wp-services</finalName>
 	</build>
